2006-10-04  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (library_path_var): Substitute value from configure.
	(do-subst-script-vals): Add library_path_var to the list.
	* run-octave.in: Substitute value here.

2006-10-03  John W. Eaton  <jwe@octave.org>

	* configure.in: Warn if PCRE library is not found.

	* configure.in: Include CAMD_LIBS, AMD_LIBS, and REGEX_LIBS in the
	summary.

2006-10-03  David Bateman  <dbateman@free.fr>

	* configure.in: Check for libcamd.
	* Makeconf.in (CAMD_LIBS): New variable.

2006-09-27  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in [--mex]: Include -I. in incflags.
	From Soren Hauberg <soren@hauberg.org>.

2006-09-26  John W. Eaton  <jwe@octave.org>

	* configure.in (AC_CONFIG_FILES):
	Remove doc/interpreter/images/Makefile from the list.

2006-09-16  John W. Eaton  <jwe@octave.org>

	* octave-bug.in: Delete LIBPLPLOT variables.

2006-09-15  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for locale.h and setlocale.

2006-09-13  Christopher Hulbert  <cchgroupmail@gmail.com>

	* run-octave.in (LD_LIBRARY_PATH): Also append LD_LIBRARY_PATH
	from environment.

2006-08-25  Alexander Barth  <abarth@marine.usf.edu>

	* mkoctfile.in: Accept .f90 and .F90 as Fortran files.
	Pass $incflags and $defs to Fortran compiler.

2006-08-18  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (do-subst-texinfo-vals): Don't substitute
	%CANONICAL_HOST_TYPE%.

2006-08-17  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_PROG_GHOSTSCRIPT, OCTAVE_PROG_MAKEINFO,
	OCTAVE_PROG_TEXI2DVI, OCTAVE_PROG_TEXI2PDF): New macros.
	* configure.in: Use them.  Maybe print warnings in summary.

2006-07-27  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (localapiarchlibdir): Substitute it here.
	(do-subst-default-vals): Include it in the sed command here.
	* configure.in (localapiarchlibdir): New variable.
	* octave-config.in: Don't quote %VAR% values.
	(LOCALAPIARCHLIBDIR): New variable.

2006-07-27  Thomas Weber  <thomas.weber.mail@gmail.com>
