@@ -73,6 +73,10 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 #define OCTAVE_CONF_CPPFLAGS %OCTAVE_CONF_CPPFLAGS%
 #endif
 
+#ifndef OCTAVE_CONF_CURL_LIBS
+#define OCTAVE_CONF_CURL_LIBS %OCTAVE_CONF_CURL_LIBS%
+#endif
+
 #ifndef OCTAVE_CONF_CXXCPP
 #define OCTAVE_CONF_CXXCPP %OCTAVE_CONF_CXXCPP%
 #endif
