@@ -722,6 +722,7 @@ specified option.\n\
       "CFLAGS", OCTAVE_CONF_CFLAGS,
       "CPICFLAG", OCTAVE_CONF_CPICFLAG,
       "CPPFLAGS", OCTAVE_CONF_CPPFLAGS,
+      "CURL_LIBS", OCTAVE_CONF_CURL_LIBS,
       "CXX", OCTAVE_CONF_CXX,
       "CXXCPP", OCTAVE_CONF_CXXCPP,
       "CXXFLAGS", OCTAVE_CONF_CXXFLAGS,
